# Django_sub

./: .gitignore  manage.py  pyproject.toml
config/settings/: base.py  local.py  prod.py
django_sub/: asgi.py  settings.py  urls.py  wsgi.py
